@@ -1,3 +1,9 @@
+Wed Jan 28 13:22:00 2004  Gautam H. Thaker  <gthaker@atl.lmco.com>
+
+        * docs/releasenotes/index.html (CORBA):
+
+        added SCIOP entry in docs/releasenotes/index.html
+
 Wed Jan 28 13:21:00 2004  Chad Elliott  <elliott_c@ociweb.com>
 
         * tests/QtTests/QtTests.mpc:
